<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.tutu</groupId>
        <artifactId>eat</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>hs_recycle</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.tutu</groupId>
            <artifactId>hs_common</artifactId>
            <version>0.0.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>com.github.binarywang</groupId>-->
<!--            <artifactId>weixin-java-miniapp</artifactId>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.tutu</groupId>
            <artifactId>hs_system</artifactId>
            <version>0.0.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.tutu</groupId>
            <artifactId>hs_user</artifactId>
            <version>0.0.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.tutu</groupId>
            <artifactId>hs_point</artifactId>
            <version>0.0.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>

        <!-- Thymeleaf 用于渲染 HTML 模板 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>

        <!-- Flying Saucer + OpenPDF（HTML → PDF） -->
        <dependency>
            <groupId>org.xhtmlrenderer</groupId>
            <artifactId>flying-saucer-pdf-openpdf</artifactId>
        </dependency>

        <!-- 字体支持（可选，但支持中文推荐加） -->
        <dependency>
            <groupId>com.github.librepdf</groupId>
            <artifactId>openpdf</artifactId>
        </dependency>
        
        <!-- 添加旧版本 iText 以解决 flying-saucer-pdf-openpdf 的兼容性问题 -->
        <!-- flying-saucer-pdf-openpdf 内部可能引用了 com.lowagie.text.DocumentException -->
<!--        <dependency>-->
<!--            <groupId>com.lowagie</groupId>-->
<!--            <artifactId>itext</artifactId>-->
<!--            <version>2.1.7</version>-->
<!--        </dependency>-->
    </dependencies>

</project>